--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "moush-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "delete":"find /src -type f -name '*.js' -exec rm {} +"
+    "build": "tsc & webpack"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "v8-compile-cache": "^2.3.0",
+    "webpack": "^5.58.0",
+    "webpack-cli": "^4.9.0"
+  }
 }
