--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc & webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "v8-compile-cache": "^2.3.0",
     "webpack": "^5.58.0",
-    "webpack-cli": "^4.9.0"
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
